--- a/index2.html
+++ b/index2.html
@@ -8,6 +8,7 @@
 		<div class="btn from-top">CURRENT PRODUCTS</div>
 		<div class="btn about-me">ABOUT ME</div>
 		<div class="btn contact">CONTACT US</div>
+		<div class="btn shop">SHOP</div>
 	</p>
 	</body>
 
