--- a/untitled-master/about.html
+++ b/untitled-master/about.html
@@ -6,6 +6,7 @@
   </head>
     <div>
       <body>
+	<div class="btn homepage"><a href="index.html">HOMEPAGE</a></div>      
         <div class="jzdesigns">
           <h1> JZ DESIGNS </h1>
         </div>
