--- a/untitled-master/contact.html
+++ b/untitled-master/contact.html
@@ -5,6 +5,7 @@
   <title>JZ DESIGNS CONTACT</title>
     </head>
 	<body>
+	<div class="btn homepage"><a href="index.html">HOMEPAGE</a></div>
 	<div id="form-main">
   <div id="form-div">
     <form class="form" id="form1">
