--- a/untitled-master/products.html
+++ b/untitled-master/products.html
@@ -7,6 +7,7 @@
   	<body>
 	
 	 <div class="currentproducts">
+	<div class="btn homepage"><a href="index.html">HOMEPAGE</a></div>
             <h1> CURRENT PRODUCTS </h1>
         </div>
           <div class="responsive">
