--- a/untitled-master/about.html
+++ b/untitled-master/about.html
@@ -21,9 +21,39 @@
           <p>
            I am currently looking into expanding using different materials to create a wider range of products. I deal in graphic design, designing prints, postcards, notebooks and mugs, and am currently venturing into textiles.
           </p>
-        
-    <div class="clearfix"></div>
+        <div>
+	  <div class="responsive">
+            <div class="gallery">
+              <a target="blank" href="images\TIGERRRRRR.png">
+          <img src="images\TIGERRRRRR.png" alt="tiger" >
+        </a>
+          </div>
+        </div>
+	  <div class="responsive">
+          <div class="gallery">
+            <a target="blank" href="images\deer coloured in.png">
+        <img src="images\deer coloured in.png" alt="deer" >
+      </a>
+        </div>
+      </div>
+	  
+	    <div class="responsive">
+          <div class="gallery">
+            <a target="blank" href="images\pink flower colored high sat signed.png">
+        <img src="images\pink flower colored high sat signed.png" alt="flower" >
+      </a>
+        </div>
+      </div>
+	    <div class="responsive">
+          <div class="gallery">
+            <a target="blank" href="images\flamingo coloured signed.png">
+        <img src="images\flamingo coloured signed.png" alt="flamingo" >
+      </a>
+        </div>
+      </div>
 	  
       </body>
     </div>
+    <div class="clearfix"></div>
+	 
 </html>
