--- a/untitled-master/products.html
+++ b/untitled-master/products.html
@@ -3,7 +3,7 @@
   <head>
   <link rel="stylesheet" type="text/css" href="css/stylesheet.css">
   
-  
+  <div>
   	<body>
 	
 	 <div class="currentproducts">
@@ -45,5 +45,5 @@
     <div class="clearfix"></div>
 	
 	</body>
-  
+	  </div>
   </html>
