--- a/untitled-master/products.html
+++ b/untitled-master/products.html
@@ -36,7 +36,7 @@
       </div>
 	    <div class="responsive">
           <div class="gallery">
-            <a target="blank" href="postcards.jpg">
+            <a target="blank" href="images\postcards.jpg">
         <img src="images\postcards.jpg" alt="postcards" >
       </a>
       <div class="desc">Postcards</div>
