--- a/untitled-master/products.html
+++ b/untitled-master/products.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
   <head>
-  <link rel="stylesheet" type="text/css" href="css/stylesheet.css">
+  <link rel="stylesheet" type="text/css" href="css/style.css">
   
   <div>
   	<body>
