--- a/untitled-master/index.html
+++ b/untitled-master/index.html
@@ -7,7 +7,7 @@
 	<body>
 	<p>
 		<div class="logo">JZ DESIGNS</div>
-		<div class="btn from-top">PRODUCTS</div>
+		<div class="btn from-top"><a href="products.html">PRODUCTS</a></div>
 		<div class="btn about-me"><a href="about.html">ABOUT ME</a></div>
 		<div class="btn contact"><a href="contact.html">CONTACT US</a></div>
 		<div class="btn shop">LOCATIONS</div>
