--- a/untitled-master/about.html
+++ b/untitled-master/about.html
@@ -2,10 +2,22 @@
 <html>
   <head>
   <link rel="stylesheet" type="text/css" href="css/style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <title>JZ DESIGNS ABOUT</title>
   </head>
     <div>
       <body>
+	      <div style="padding-left:16px">	
+	<div class="topnav">
+   <div class="search-container">
+    <form action="/action_page.php">
+      <input type="text" placeholder="Search..." name="search">
+	  <button type="submit"><i class="fa fa-search"></i></button>
+    </form>
+  </div>
+</div>
+</div>
+
 	<div class="btn homepage"><a href="index.html">HOMEPAGE</a></div>      
         <div class="jzdesigns">
           <h1> JZ DESIGNS </h1>
