--- a/untitled-master/products.html
+++ b/untitled-master/products.html
@@ -45,7 +45,12 @@
         </div>
       </div>
     <div class="clearfix"></div>
-	
+	 
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+	<div class="social">
+		<a href="#" class="fa fa-facebook"></a>
+		<a href="#" class="fa fa-instagram"></a>
+	</div>
 	</body>
 	  </div>
   </html>
