--- a/untitled-master/products.html
+++ b/untitled-master/products.html
@@ -2,9 +2,19 @@
 <html>
   <head>
   <link rel="stylesheet" type="text/css" href="css/style.css">
-  
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <div>
-  	<body>
+  	<div style="padding-left:16px">	
+	<div class="topnav">
+   <div class="search-container">
+    <form action="/action_page.php">
+      <input type="text" placeholder="Search..." name="search">
+	   <button type="submit"><i class="fa fa-search"></i></button>
+    </form>
+  </div>
+</div>
+</div>
+	  <body>
 		<p>
 	<div class="btn homepage"><a href="index.html">HOMEPAGE</a></div>
 		</p>
